acabado em principio

--- a/I/modelo2/modelo2.ipynb
+++ b/I/modelo2/modelo2.ipynb
@@ -27,11 +27,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e2a4e582-0463-4357-8ae0-5830971181a4",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pulp import *\n",
@@ -39,7 +35,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d164efa6-b98d-4785-9cb6-38f5bd943bc1",
    "metadata": {},
@@ -47,8 +42,8 @@
     "$$\n",
     "\\begin{align*}\n",
     "f(\\mathbf{d^{\\pm}};\\mathbf{p^{\\pm}}, \\mathbf{t}) &= \\sum \\frac{p_i^+ d_i^+ + p_i^- d_i^-}{t_i} \\\\\n",
-    "f(\\d1-,\\d2-,\\d2+,\\d3+; \\p1-=5, \\p2-=\\frac45, \\p2+=2, \\p3+=5, t_1 = 125, t_2 = 60, t_3 = 55)\n",
-    "&= \\frac5{125}\\d1- + \\frac4{5\\cdot60}\\d2-+\\frac2{60}\\d2++\\frac5{55}\\d3+\n",
+    "f(\\d1-,\\d2-,\\d2+,\\d3+; \\p1-=5, \\p2-=2, \\p2+=\\frac45, \\p3+=5, t_1 = 125, t_2 = 60, t_3 = 55)\n",
+    "&= \\frac5{125}\\d1- + \\frac2{60}\\d2-+\\frac4{5\\cdot60}\\d2++\\frac5{55}\\d3+\n",
     "\\end{align*}\n",
     "$$"
    ]
@@ -57,11 +52,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "122c9256-674d-4d1c-8651-6dbf4750ca0f",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "d = {\n",
@@ -75,18 +66,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6ff887a9-886b-4a65-a083-ed0fb0fd394d",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "modelo2:\n",
        "MINIMIZE\n",
-       "4.0*d1menos + 3.3333333333333335*d2mais + 1.3333333333333335*d2menos + 9.090909090909092*d3mais + 0.0\n",
+       "4.0*d1menos + 1.3333333333333335*d2mais + 3.3333333333333335*d2menos + 9.090909090909092*d3mais + 0.0\n",
        "SUBJECT TO\n",
        "maximo_de_D1: D1 <= 6\n",
        "\n",
@@ -127,8 +114,8 @@
     "modelo +=  5*D[1] + 5*D[2] + 8*D[3] - d[3, \"+\"]            <= 55 ,    \"meta de travar o investimento\"\n",
     "\n",
     "modelo +=   100 * (5/125)   * d[1, \"-\"] + \\\n",
-    "            100 * (4/(5*60))* d[2, \"-\"] + \\\n",
-    "            100 * (2/60)    * d[2, \"+\"] + \\\n",
+    "            100 * (2/60)    * d[2, \"-\"] + \\\n",
+    "            100 * (4/(5*60))* d[2, \"+\"] + \\\n",
     "            100 * (5/55)    * d[3, \"+\"]\n",
     "modelo"
    ]
@@ -137,18 +124,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a241e12a-cfa8-4635-ba4e-269aea56a3fe",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "status:  1\n",
-      "valor do objetivo: 95.87878787878789\n",
+      "valor do objetivo: 133.87878787878788\n",
       "variáveis:\n",
       "    D1 = 6.0\n",
       "    D2 = 3.5\n",
