--- a/I/modelo3/modelo3.ipynb
+++ b/I/modelo3/modelo3.ipynb
@@ -1,15 +1,14 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "39c33d5d-8697-415b-b287-c3fcb409f568",
    "metadata": {},
    "source": [
     "$$\n",
-    "\\renewcommand{\\p}[2]{p_{#1}^{#2}}\n",
-    "\\renewcommand{\\ceil}[1]{\\left \\lceil #1 \\right \\rceil }\n",
-    "\\renewcommand{\\dl}[2]{d_{#1}^{#2'}}\n",
+    "\\newcommand{\\p}[2]{p_{#1}^{#2}}\n",
+    "\\newcommand{\\ceil}[1]{\\left \\lceil #1 \\right \\rceil }\n",
+    "\\newcommand{\\dl}[2]{d_{#1}^{#2'}}\n",
     "\\begin{alignat*}{3}\n",
     "&\\text{minimizar }&f(\\d1-,\\d2-,\\d2+,\\d3+; \\p1-, \\p2-, \\p2+, \\p3+, t_1, t_2, t_3)\\\\\n",
     "&\\text{sujeito a }\\\\\n",
@@ -29,11 +28,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e2a4e582-0463-4357-8ae0-5830971181a4",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pulp import *\n",
@@ -41,7 +36,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d164efa6-b98d-4785-9cb6-38f5bd943bc1",
    "metadata": {},
@@ -66,10 +60,10 @@
     "&&D_2 \\geq 2 \\\\\n",
     "&&D_3 \\geq 1 \\\\\n",
     "&&12D_1+9D_2+5D_3+\\d1-\\geq125\\\\\n",
-    "&&D_1+\\frac{2}{5}D_2+\\frac{4}{5}D_3+\\dl2--\\dl2+=12\\\\\n",
+    "&&5D_1+2D_2+4D_3+\\d2--\\d2+=60\\\\\n",
     "&&5D_1+5D_2+8D_3-\\d3+ \\leq 55\\\\\n",
     "&&\\d{i}{\\pm} \\geq 0\\\\\n",
-    "&&\\dl2\\pm \\in \\mathbb{N_0}\n",
+    "&&\\d2\\pm \\in \\mathbb{N_0}\n",
     "\\end{alignat*}\n",
     "$$"
    ]
@@ -78,11 +72,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "122c9256-674d-4d1c-8651-6dbf4750ca0f",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "d = {\n",
@@ -91,8 +81,8 @@
     "}\n",
     "p = {\n",
     "    (1, \"-\"): 5,\n",
-    "    (2, \"-\"): 4,\n",
-    "    (2, \"+\"): 10,\n",
+    "    (2, \"-\"): 2,\n",
+    "    (2, \"+\"): 0.8,\n",
     "    (3, \"+\"): 5\n",
     "}\n",
     "t = {\n",
@@ -108,11 +98,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6ff887a9-886b-4a65-a083-ed0fb0fd394d",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -123,9 +109,9 @@
        "SUBJECT TO\n",
        "_C1: - Q + 0.04 d1menos <= 0\n",
        "\n",
-       "_C2: - Q + 0.833333333333 d2mais <= 0\n",
+       "_C2: - Q + 0.0666666666667 d2mais <= 0\n",
        "\n",
-       "_C3: - Q + 0.333333333333 d2menos <= 0\n",
+       "_C3: - Q + 0.166666666667 d2menos <= 0\n",
        "\n",
        "_C4: - Q + 0.0909090909091 d3mais <= 0\n",
        "\n",
@@ -180,27 +166,23 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a241e12a-cfa8-4635-ba4e-269aea56a3fe",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "status:  1\n",
-      "valor do objetivo: 2.2727273\n",
+      "valor do objetivo: 1.6666667\n",
       "variáveis:\n",
       "    D1 = 6.0\n",
       "    D2 = 2.0\n",
-      "    D3 = 5.0\n",
-      "    Q = 2.2727273\n",
-      "    d1menos = 10.0\n",
+      "    D3 = 4.0\n",
+      "    Q = 1.6666667\n",
+      "    d1menos = 15.0\n",
       "    d2mais = 0.0\n",
-      "    d2menos = 6.0\n",
-      "    d3mais = 25.0\n"
+      "    d2menos = 10.0\n",
+      "    d3mais = 17.0\n"
      ]
     }
    ],
