--- a/I/preemp/preemp.ipynb
+++ b/I/preemp/preemp.ipynb
@@ -20,7 +20,7 @@
     "\\newcommand{\\d}[2]{d_{#1}^{#2}}\n",
     "\\newcommand{\\p}[2]{p_{#1}^{#2}}\n",
     "\\begin{alignat*}{3}\n",
-    "&\\text{minimizar }&\\frac4{5\\cdot60}\\d2-+\\frac2{60}\\d2++\\frac5{55}\\d3+\\\\\n",
+    "&\\text{minimizar }&\\frac2{60}\\d2-+\\frac4{5\\cdot60}\\d2++\\frac5{55}\\d3+\\\\\n",
     "&\\text{sujeito a }\\\\\n",
     "&&D_1 \\leq 6 \\\\\n",
     "&&D_2 \\geq 2 \\\\\n",
@@ -44,18 +44,7 @@
     "    (i,pm):LpVariable(f\"d{i}{'mais' if pm == '+' else 'menos'}\", lowBound=0, cat = 'Integer' if i == 2 else 'Continuous') \n",
     "        for i in range(1,4) for pm in [\"+\", \"-\"]\n",
     "}\n",
-    "D = {i: LpVariable(f\"D{i}\", lowBound=0) for i in range(1, 4)}\n",
-    "p = {\n",
-    "    (1, \"-\"): 5,\n",
-    "    (2, \"-\"): 4,\n",
-    "    (2, \"+\"): 10,\n",
-    "    (3, \"+\"): 5\n",
-    "}\n",
-    "t = {\n",
-    "    1:125,\n",
-    "    2:12,\n",
-    "    3:55\n",
-    "}"
+    "D = {i: LpVariable(f\"D{i}\", lowBound=0) for i in range(1, 4)}"
    ]
   },
   {
@@ -69,7 +58,7 @@
       "text/plain": [
        "nivel1:\n",
        "MINIMIZE\n",
-       "3.3333333333333335*d2mais + 1.3333333333333335*d2menos + 9.090909090909092*d3mais + 0.0\n",
+       "1.3333333333333335*d2mais + 3.3333333333333335*d2menos + 9.090909090909092*d3mais + 0.0\n",
        "SUBJECT TO\n",
        "maximo_de_D1: D1 <= 6\n",
        "\n",
@@ -107,9 +96,9 @@
     "modelo +=  5*D[1] + 5*D[2] + 8*D[3] - d[3, \"+\"]            <= 55 ,    \"meta de travar o investimento\"\n",
     "\n",
     "modelo +=  \\\n",
-    "    100 * (4/(5*60))* d[2, \"-\"] + \\\n",
-    "    100 * (2/60)    * d[2, \"+\"] + \\\n",
-    "    100 * (5/55)    * d[3, \"+\"]\n",
+    "    100 * (2/60)       * d[2, \"-\"] + \\\n",
+    "    100 * (4/(5*60)) * d[2, \"+\"] + \\\n",
+    "    100 * (5/55)     * d[3, \"+\"]\n",
     "modelo"
    ]
   },
@@ -124,7 +113,7 @@
      "output_type": "stream",
      "text": [
       "status:  1\n",
-      "valor do objetivo: 25.333333333333336\n",
+      "valor do objetivo: 63.333333333333336\n",
       "variáveis:\n",
       "    D1 = 6.0\n",
       "    D2 = 2.0\n",
@@ -156,7 +145,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b1248968-d49e-48d0-b7c2-d9a0d7e8c56c",
    "metadata": {},
