--- a/I/modelo1/modelo1.ipynb
+++ b/I/modelo1/modelo1.ipynb
@@ -1,14 +1,13 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "39c33d5d-8697-415b-b287-c3fcb409f568",
    "metadata": {},
    "source": [
     "$$\n",
-    "\\renewcommand{\\d}[2]{d_{#1}^{#2}}\n",
-    "\\renewcommand{\\p}[2]{p_{#1}^{#2}}\n",
+    "\\newcommand{\\d}[2]{d_{#1}^{#2}}\n",
+    "\\newcommand{\\p}[2]{p_{#1}^{#2}}\n",
     "\\begin{alignat*}{3}\n",
     "&\\text{minimizar }&f(\\d1-,\\d2-,\\d2+,\\d3+; \\p1-, \\p2-, \\p2+, \\p3+)\\\\\n",
     "&\\text{sujeito a }\\\\\n",
@@ -28,11 +27,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e2a4e582-0463-4357-8ae0-5830971181a4",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pulp import *\n",
@@ -40,7 +35,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d164efa6-b98d-4785-9cb6-38f5bd943bc1",
    "metadata": {},
@@ -48,8 +42,8 @@
     "$$\n",
     "\\begin{align*}\n",
     "f(\\mathbf{d^{\\pm}};\\mathbf{p^{\\pm}}) &= \\sum \\left( p_i^\\pm d_i^+ + p_i^-d_i^-\\right) \\\\\n",
-    "f(\\d1-,\\d2-,\\d2+,\\d3+; \\p1-=5, \\p2-=\\frac45, \\p2+=2, \\p3+=5)\n",
-    "&= 5\\d1- + \\frac45\\d2- + 2\\d2+ + 5\\d3+\n",
+    "f(\\d1-,\\d2-,\\d2+,\\d3+; \\p1-=5, \\p2-=2, \\p2+=\\frac45, \\p3+=5)\n",
+    "&= 5\\d1- + 2\\d2- + \\frac45\\d2+ + 5\\d3+\n",
     "\\end{align*}\n",
     "$$"
    ]
@@ -58,11 +52,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "122c9256-674d-4d1c-8651-6dbf4750ca0f",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "d = {\n",
@@ -76,18 +66,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6ff887a9-886b-4a65-a083-ed0fb0fd394d",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "modelo1:\n",
        "MINIMIZE\n",
-       "5*d1menos + 2*d2mais + 0.8*d2menos + 5*d3mais + 0.0\n",
+       "5*d1menos + 0.8*d2mais + 2*d2menos + 5*d3mais + 0.0\n",
        "SUBJECT TO\n",
        "maximo_de_D1: D1 <= 6\n",
        "\n",
@@ -127,7 +113,7 @@
     "modelo +=  5*D[1] + 2*D[2] + 4*D[3] + d[2, \"-\"] - d[2,\"+\"] == 60 ,    \"meta de manter o nivel de mao de obra\"\n",
     "modelo +=  5*D[1] + 5*D[2] + 8*D[3] - d[3, \"+\"]            <= 55 ,    \"meta de travar o investimento\"\n",
     "\n",
-    "modelo += 5*d[1, \"-\"] + (4/5)*d[2, \"-\"] + 2*d[2, \"+\"] + 5*d[3, \"+\"] #objectivo\n",
+    "modelo += 5*d[1, \"-\"] + 2*d[2, \"-\"] + (4/5)*d[2, \"+\"] + 5*d[3, \"+\"] #objectivo\n",
     "modelo"
    ]
   },
@@ -135,18 +121,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a241e12a-cfa8-4635-ba4e-269aea56a3fe",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "status:  1\n",
-      "valor do objetivo: 63.346154999999996\n",
+      "valor do objetivo: 81.346155\n",
       "variáveis:\n",
       "    D1 = 6.0\n",
       "    D2 = 5.2692308\n",
