adicionado versao e data

--- a/I/relatorio/texto.tex
+++ b/I/relatorio/texto.tex
@@ -25,6 +25,11 @@
   %\rule[-0.5cm]{\linewidth}{2pt}\\
   \normalsize
   \vspace{3cm}
+  {\large\begin{center}
+    8 Maio 2023\\
+    Versão 1.0.0
+  \end{center}}
+  \vspace{3cm}
   {
     \let\clearpage\relax
     \tableofcontents
